Avoid renderer kills for missing NavigationHandle in DidFail.

TBR=clamy
BUG=605289
TEST=Fewer renderer kills in the stability data.
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1907693002

Cr-Commit-Position: refs/heads/master@{#388680}

Former-commit-id: ec53a5efe2db2eaf81f43e69430a128a7fe5ec31